# privacy-x-perps

./: .gitignore  Anchor.toml  DESIGN.md  HANDOVER.md  JOURNAL.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: next.config.ts  package.json  vercel.json
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/api/faucet/: route.ts
app/src/app/trade/: layout.tsx  page.tsx
app/src/components/: Faq.tsx  IcebergMark.tsx  IcebergSeal.tsx  SiteNav.tsx
app/src/components/trade/: BatchChip.tsx  CollateralPanel.tsx  DepositDrawer.tsx  OpenOrders.tsx  OrderTicket.tsx  PositionsPanel.tsx  PriceChart.tsx  TradeScreen.tsx  WalletButton.tsx
app/src/hooks/: useAutoDismiss.ts  useBatchBuffer.ts  useBatchSettledEvent.ts  useFillHistory.ts  useIndexPrice.ts  useMxePublicKey.ts  usePosition.ts  useUsdcBalance.ts  useUserCollateral.ts
app/src/idl/: confidential_perps.json  confidential_perps.ts
app/src/lib/: anchor.ts  config.ts  errors.ts  format.ts  localBurnerWallet.ts  orderStash.test.ts  orderStash.ts  polyfills.ts
design/: iceberg-icon-explore.html  iceberg-mark.html  landing-mockup.html  ref-view.html  wordmark-explore.html
docs/: circuit-v0.md
encrypted-ixs/src/: lib.rs
keeper/: package.json
keeper/src/: index.ts
programs/confidential_perps/: Cargo.toml
programs/confidential_perps/src/: constants.rs  error.rs  lib.rs  pyth.rs
programs/confidential_perps/src/instructions/: add_together.rs  cancel_order.rs  close_position.rs  deposit.rs  expire_batch.rs  init_market.rs  init_pool.rs  liquidate_position.rs  match_batch.rs  mod.rs  process_batch.rs  set_mock_oracle.rs  submit_order.rs  withdraw.rs
programs/confidential_perps/src/state/: mod.rs
scripts/: .devnet-state.json  build-pyth-fixture.mjs  counterparty.ts  devnet-e2e.ts  devnet-init.ts  devnet-offchain-comp-def.ts  devnet-smoke.ts  inspect-state.ts  lifecycle-driver.ts  localnet-bootstrap.ts  setup-faucet-devnet.ts  test-v0a.ts
sdk/: package.json  tsconfig.json
sdk/src/: encryption.ts  index.ts  oracle.ts  pdas.ts  types.ts
tests/: confidential_perps.ts  matching.ts
tests/fixtures/: pyth_sol_usd.json
