[package]
name = "confidential_perps"
version = "0.1.0"
description = "Created with Arcium & Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "confidential_perps"

[features]
# v0 NOTE: `test-stale-ok` is on by default because `arcium build` has no
# `--features` flag and our tests need the looser freshness window for
# the cloned-from-devnet PriceUpdateV2 (publish_time frozen at clone-time).
# Pre-mainnet TODO: strip `test-stale-ok` from `default` and verify the
# 30s window holds against real-time Pyth pushes on devnet.
default = ["test-stale-ok", "mock-oracle"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
# Loosen Pyth freshness check (30s -> 600s) for localnet tests that read
# a cloned PriceUpdateV2 whose publish_time is frozen at clone-time. Off
# in any prod build.
test-stale-ok = []
# DEMO/LOCALNET ONLY. Enables the `set_mock_oracle` instruction and lets
# `read_pyth_price` accept a program-owned mock PriceUpdateV2 account, so a
# localnet crank can push a live SOL/USD price (no Wormhole/publisher network
# exists on a bare validator). In `default` because `arcium build` has no
# `--features` flag. SECURITY: this relaxes the oracle owner check (the trust
# boundary) — MUST be stripped from `default` before any devnet/mainnet build.
mock-oracle = []

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.2", features = ["token", "associated_token"] }
arcium-client = { default-features = false, version = "=0.10.3" }
arcium-macros = "=0.10.3"
arcium-anchor = "=0.10.3"
# pin so that we do not have 1.13.*
unicode-segmentation = { version = "=1.12.0"}
# pin so that we do not have edition = 2024
hashbrown = { version = "=0.16.1"}
indexmap = { version = "=2.13.1"}

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
