[package]
name = "confidential_perps"
version = "0.1.0"
description = "Created with Arcium & Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "confidential_perps"

[features]
# REAL-NETWORK BUILD: `default` is empty so devnet/mainnet builds use the real
# Pyth owner check and the 60s freshness window (constants.rs). `arcium build`
# has no `--features` flag, so the ONLY way to enable a feature is to list it
# here. The localnet TEST suite does not need any feature: it reads the synthetic
# fixture (tests/fixtures/pyth_sol_usd.json, publish_time=i64::MAX), not the mock.
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
# LOCALNET LIVE-ORACLE DEV ONLY. Enables `set_mock_oracle` + lets read_pyth_price
# accept a program-owned mock PriceUpdateV2, so a localnet crank can push a live
# SOL/USD price (no Wormhole/publisher network exists on a bare validator). To use
# it, temporarily add "mock-oracle" to `default` above and rebuild. SECURITY: it
# relaxes the oracle owner check (the trust boundary) — NEVER ship a build with
# this in `default` to devnet/mainnet.
mock-oracle = []

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.2", features = ["token", "associated_token"] }
arcium-client = { default-features = false, version = "=0.10.3" }
arcium-macros = "=0.10.3"
arcium-anchor = "=0.10.3"
# pin so that we do not have 1.13.*
unicode-segmentation = { version = "=1.12.0"}
# pin so that we do not have edition = 2024
hashbrown = { version = "=0.16.1"}
indexmap = { version = "=2.13.1"}

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
